# PuttyU

./: .dockerignore  .env.example  .gitignore  ACKNOWLEDGMENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  THREAT_MODEL.md  app.py  docker-compose.gpu-amd.yml  docker-compose.gpu-nvidia.yml  docker-compose.yml  install-service.sh  last_session.txt  package-lock.json  package.json  puttyu-ui.service  pyproject.toml  setup.py
.fitness/: README.md  contract.sh  cross-feature.sh  cut-modules.txt  e2e.sh  file-size.sh  graph-one-door-allowlist.txt  graph-one-door.sh  js-allowlist.txt  lean-core-paths.txt  lib.sh  no-cross-feature-import.sh  no-javascript.sh  no-new-raw-json.sh  no-raw-json.sh  oversized-allowlist.txt  owner-scoped-allowlist.txt  owner-scoped.sh  pytest.sh  raw-body-allowlist.txt  response-model.sh  route-response-models.sh  router-one-door.sh  run-all.sh  ts-only.sh  types-lint.sh  ui-contract-endpoints.txt  web-test.sh
.github/: pull_request_template.md
backend/: .env.example  app.py  pyproject.toml
backend/core/: auth.py  config.py  crypto.py  database.py  middleware.py  models.py  scoping.py
backend/engines/: __init__.py  model_router.py
backend/routes/: auth_routes.py  health_routes.py  provider_routes.py  router_routes.py  settings_routes.py
backend/scripts/: openapi-export.py
backend/tests/: conftest.py  test_auth.py  test_health.py  test_providers_api.py  test_router.py
companion/: README.md  __init__.py  routes.py
core/: app_env.py  auth.py  constants.py  database.py  (+2 more)
(+614 files in other folders)
