[project]
name = "puttyu-backend"
version = "0.0.0"
description = "PuttyU backend — self-hosted AI tutoring workspace"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "bcrypt>=5.0.0",
]

# Dev/test deps (installed by `uv sync` by default).
[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

# This is an application, not a library — don't try to build/install the project.
[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "quarantine: flaky test — excluded from the blocking Gate 2 run (ADR-0002)",
]
